# lrdb-client

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: magician.cpp
app/src/main/java/cz/lunakv/fmatfyz/: DebugFragment.kt  FileMan.kt  FirebaseListener.kt  HomeFragment.kt  MainActivity.kt  MorsePlayer.kt  NotesFragment.kt  ReferenceFragment.kt  Worker.kt
app/src/main/res/drawable/: ic_fmf_icon.xml  ic_fmf_icon_outline.xml  international_morse_code_regular.xml  morse_reference.xml
app/src/main/res/layout/: app_bar_main.xml  content_main.xml  fragment_debug.xml  fragment_home.xml  fragment_notes.xml  fragment_reference.xml  nav_header_main.xml
app/src/main/res/menu/: activity_main_drawer.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
